2012-03-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-22
	* Add Oracle script to create read-only schemas using dblinks.
	* Update confdb.properties to the new active dataguard setup.
	* Fix an error in build.xml to deploy the browser.
	* Disable python parser Option.

2012-03-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-21
	* First implementation of the Python parser using Jython 2.5.2.
	- Still needs some improvements for PSets, validations, etc.
	- Includes a modified version of jython-2.5.2.jar and some other
	  extra libraries to work.


2012-02-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-20
	* Prepare Confdb to be compatible with both table definitions (tmp_sequence_entries)
	  allowing to retrieve the operator field when available in the database.

2012-02-20 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-19
	* Update load_configuration procedure and SQL definitions to take into account module 
	  reference operators inside Sequences.
	* Modify psSelectSequenceEntries statement.

2012-02-19 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-18 put operator(IGNORE,NEGATE) also for modules inside
	* sequences (so far only for modules directly in a path)
	* - still needs DB intervention

2012-02-11 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-17 Improve migration

2012-02-10 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-15/16
	* Extension of menu-diff: use the result of the diff between two
	  configuration as a patch to modify a third configuration,
	  resulting in a patched, fourth configuration.
	  Only added or changed paths, but not deleted paths, are
	  updated (deep update, ie, including changed sequences
	  and modules)

2012-02-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-14
	* Add "Assign path to a primary dataset" option attached to each path (bug/feature 82526).