@@ -15,6 +15,16 @@
     <jar href="mysql-connector-java-5.0.5-bin.jar" download="eager"/>
     <jar href="ojdbc14.jar" download="eager"/>
     <jar href="swing-layout-1.0.jar" download="eager"/>
+   
+	<jar href="jython-2.5.2.jar" download="eager"/>
+	<jar href="antlr-runtime-3.1.3.jar" download="eager"/>
+	<jar href="asm-3.1.jar" download="eager"/>
+	<jar href="asm-commons-3.1.jar" download="eager"/>
+	<jar href="asm-util-3.1.jar" download="eager"/>
+	<jar href="constantine-0.4.jar" download="eager"/>
+	<jar href="jna.jar" download="eager"/>
+	<jar href="jna-posix.jar" download="eager"/>
+
   </resources>
   <application-desc main-class="confdb.gui.ConfDbGUI">
   </application-desc>
